Bug 331846: Can't indent/outdent RTL blocks in Composer and Design Mode. r=timeless sr=bzbarsky